--- a/www/css/index.css
+++ b/www/css/index.css
@@ -165,8 +165,18 @@ html .ui-page-theme-a {
     right: 0;
 }
 
-#splashPage {
+#splashPage, #browsePage .ui-panel-wrapper {
 	background: #9ec0fd url("../img/logo-background.jpg") no-repeat scroll center bottom / 40% auto;
+}
+
+#splashPage .ui-header {
+	line-height: 2.4;
+}
+
+#splashPage .ui-header .ui-title {
+	font-size: 2em;
+	padding: 0;
+	margin: 0;
 }
 
 #splashPage .ui-bar {
@@ -174,12 +184,19 @@ html .ui-page-theme-a {
 }
 
 #splashPage .ui-content {
+/*
     position: absolute;
     text-align: center;
     top: 1em;	
     bottom: 1em;
     left: 1em;
     right: 1em;
+	#splashPage 
+*/
+}
+
+.content-page img {
+	width: 100%;
 }
 
 .species-detail .photo-container {
@@ -236,4 +253,24 @@ html .ui-page-theme-a {
 
 .copyright, .website {
 	margin: 0;
+}
+
+.gallery-list .ui-block-a, .gallery-list .ui-block-b, .gallery-list .ui-block-c {
+	padding: 2px;
+}
+
+.help-raptor-list .ui-block-a, .help-raptor-list .ui-block-b, .help-raptor-list .ui-block-c {
+	overflow: hidden;
+}
+
+.help-raptor-list .thumb-wrapper {
+	display: block;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+.help-raptor-list img {
+	width: auto;
+	position: relative;
 }
